--- a/LaTex/CHAPTER6.tex
+++ b/LaTex/CHAPTER6.tex
@@ -1,11 +1,14 @@
-\documentclass[11pt]{report}  %紙張設定
+\documentclass[12pt,a4paper]{report}  %紙張設定
 \usepackage{xeCJK}%中文字體模組
-\setCJKmainfont{TW-Kai} %設定中文字體
-%\setCJKmainfont{MoeStandardKai.ttf}
-\usepackage[margin=2cm]{geometry}
-\usepackage{graphicx}
+\usepackage{graphicx}%插入圖片套件
+\usepackage{tocbibind}%自動添加目錄和參考文獻到目錄中套件
+\usepackage{hyperref}%生成超連結模組
+\usepackage[margin=2cm]{geometry}%文件邊框設為2cm
+% 在 Windows 可以使用系統所安裝的字型
+\setCJKmainfont{標楷體}%設定中文字體
+\newfontfamily\sectionef{Times New Roman}%設定英文字體
 
-%\第六章開始
+%==================第六章開始=======================%
 \begin{document}
 \begin{center} %文字置中
 \Large\textbf{6.CHAPTER} %文字變大變粗
@@ -44,8 +47,13 @@ going through many steps every time an adjustment in the prototype was made felt
 bureaucratic or too much of a workaround.\\
 由ERP系統衍生出來的一個缺點是它專注於ERP的主要範圍（見圖2），即生產和銷售。Odoo中的項目反映了這一點。例如，在模擬期間，生命週期的開發部分，雖然表示是可能的，但確實感覺像是針對生產階段而非開發本身所進行的功能延伸（見圖70）。例如，在開發原型時，許多步驟，如一開始只是創建一個 ECO 來攜帶文件，以及每次調整原型時都要進行許多步驟，感覺太過於官僚主義或是太過於繞彎。\\
 
-\includegraphics[]{6-1.png}\\%加入6-1圖片%%%%%%%%%%%%%%%%
-
+%加入01.png的圖片
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[]{image/601.png}
+  \label{fig:601}
+\end{figure}
+    
 \Large\textbf{6.1.2. How well are each of those items represented?}\\
 \Large\textbf{6.1.2. 這些項目的代表程度如何？}\\
 
@@ -177,24 +185,39 @@ chronological order effectively working as a timeline representing the item evol
 
 Most of the data related to performance regarding production is concentrated under the reporting tab as mentioned in the previous chapter (Figure 71).\\
 大部分關於生產性能的數據都集中在報告選項卡下，如前一章節所述（見圖71）。\\
-\begin{center}
-\includegraphics[]{6-2.png} %插入6-2圖片並保持置中%%%%%%%%%
-\end{center}
+
+%加入02.png的圖片
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[]{image/602.png}
+  \label{fig:602}
+\end{figure}
+
 This means that as far as performance is concerned it is quite easy to find the data. The previous chapter will show examples of possible information that are available within those tabs. In addition to using this path the UI of the product item also has a tab that point to the monthly comparison of production volume regarding the product (Figure 72). Which would be more impressive if there was more than one month in the trial version of Odoo.\\
 這意味著就性能而言，查找數據相當容易。前一章節將展示在這些選項卡中可用的可能信息示例。
 除了使用這個途徑外，產品項目的 UI 也有一個標籤，指向有關該產品的月度生產量比較（見圖 72）。如果 Odoo 的試用版本中有多個月份的話，這將更為印象深刻。\\
-\begin{center}
-\includegraphics[]{6-3.png}%插入6-3圖片並保持置中%%%%%%%%%
-\end{center}
+
+%加入03.png的圖片
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[]{image/603.png}
+  \label{fig:603}
+\end{figure}
+
 \Large\textbf{6.5.1. How easy is find production numbers?}\\
 \Large\textbf{6.5.1 找到生產數字有多容易？}\\
 
 In addition to the previously mentioned ways, Odoo also makes available a unit forecast graph that records the ins and outs of the inventory. This is particularly useful to estimate sales and balance storage with demand (Figure 73). This feature is not mentioned to much in this work because supply and demand is not so much a MES functionality, but it is to useful 
 to have an overview of the production.\\
 除了之前提到的途徑外，Odoo還提供了一個單位預測圖表，記錄庫存的進出情況。這對於估計銷售並平衡庫存與需求特別有用（見圖 73）。雖然這個功能在本文中沒有被提及太多，因為供需不是 MES 功能的主要內容，但對於獲得生產概覽是非常有用的。\\
-\begin{center}
-\includegraphics[]{6-4.png}%插入6-4圖片並保持置中%%%%%%%%%
-\end{center}
+
+%加入04.png的圖片
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[]{image/604.png}
+  \label{fig:604}
+\end{figure}
+
 \Large\textbf{6.5.2. How does Odoo generate performance data?}\\
 \Large\textbf{6.5.2. Odoo 如何生成性能數據？}\\
 
