--- a/markdown/20240321.md
+++ b/markdown/20240321.md
@@ -1,5 +1,5 @@
 ---
-Title: 2024 Spring 課程
+Title: 第五周檢討 
 Date: 2024-03-21 11:00
 Category: w5
 Tags: 網誌編寫
@@ -13,10 +13,10 @@ Author: Changyou
 # 第五周作業進度
 本周我完成期中文章翻譯的 第6章以及網誌的撰寫
 
-追蹤事項:
-1.教學影片分組整理並自評
-*在影片上填上字幕, 另行上傳到可以嵌入到各分組的網站上
-*從影片字幕中整理出逐字稿, 放在影片下方, 以 .txt 連結安排
+追蹤事項:\
+1.教學影片分組整理並自評\
+*在影片上填上字幕, 另行上傳到可以嵌入到各分組的網站上\
+*從影片字幕中整理出逐字稿, 放在影片下方, 以 .txt 連結安排\
 *並在各嵌入的教學影片下方, 以摘要方式說明該影片的教學重點
 
 2.利用 NX1872 協同繪製零組件
