--- a/markdown/20240321.md
+++ b/markdown/20240321.md
@@ -22,7 +22,12 @@ Author: Changyou
 3.統整組員子模組中的協同設計網誌
 
 # 影片1~2上字幕
-![](https://youtu.be/Wd_KVFVZHmw)
+影片1
+[字幕稿](https://github.com/Changyou41123220/cd2024/files/14784743/1.txt)
+![影片封面圖](https://youtu.be/Wd_KVFVZHmw)
+\
+\
+影片2
+[字幕稿](https://github.com/Changyou41123220/cd2024/files/14784861/2.txt)
+![影片封面圖](https://youtu.be/tSjwhVKyrb0)
 
-影片字幕稿
-![影片1字幕稿](https://github.com/Changyou41123220/cd2024/files/14784743/1.txt)
