--- a/markdown/20240321.md
+++ b/markdown/20240321.md
@@ -24,10 +24,9 @@ Author: Changyou
 # 影片1~2上字幕
 影片1
 [字幕稿](https://github.com/Changyou41123220/cd2024/files/14784743/1.txt)
-![影片封面圖](https://youtu.be/Wd_KVFVZHmw)
-\
-\
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Wd_KVFVZHmw?si=Tt02_MIcBG8IJEbm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 影片2
 [字幕稿](https://github.com/Changyou41123220/cd2024/files/14784861/2.txt)
-![影片封面圖](https://youtu.be/tSjwhVKyrb0)
+<iframe width="560" height="315" src="https://www.youtube.com/embed/tSjwhVKyrb0?si=ewhDv_wVkpDFXZdM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
