--- a/markdown/41123220_w5.md
+++ b/markdown/41123220_w5.md
@@ -4,7 +4,7 @@ Date: 2024-03-28 11:00
 Category: w5
 Tags: 網誌編寫
 Slug: 2024-Spring-w5-blog-tutorial
-Author: Changyou
+Author:koml
 ---
 
 2024 Spring 網際內容管理與協同產品設計實習課程教學導引.
