--- a/markdown/41123220_w2.md
+++ b/markdown/41123220_w2.md
@@ -3,7 +3,7 @@ Title: 第二周檢討
 Date: 2024-03-07 11:00
 Category: w2
 Tags: 網誌編寫
-Slug: 2024-Spring-w2-blog-tutorial
+Slug: changyou w2
 Author:koml
 ---
 
