--- a/markdown/41123220_w5.md
+++ b/markdown/41123220_w5.md
@@ -3,7 +3,7 @@ Title: 第五周檢討
 Date: 2024-03-28 11:00
 Category: w5
 Tags: 網誌編寫
-Slug: 2024-Spring-w5-blog-tutorial
+Slug: changyou w5
 Author:koml
 ---
 
