--- a/markdown/41123220_w5.md
+++ b/markdown/41123220_w5.md
@@ -1,9 +1,9 @@
 ---
-Title: 第五周檢討 
+Title: 41123220 w5
 Date: 2024-03-28 11:00
-Category: w5
+Category: 41123220 w5
 Tags: 網誌編寫
-Slug: changyou w5
+Slug: 41123220 w5
 Author:koml
 ---
 
