--- a/markdown/41123220_w2.md
+++ b/markdown/41123220_w2.md
@@ -11,5 +11,10 @@ Author:koml
 
 <!-- PELICAN_END_SUMMARY -->
 
-# w2
-123
+# 第二週作業
+本週任務:<br>
+1.利用 Github Classroom 指定分組倉儲<br>
+2.利用 Codespaces 維護倉儲與網站<br>
+3.設定網誌<br>
+
+我是擔任第5組的組長，所以建立分組倉儲是我的任務，這次建的倉儲和以前不一樣，是從空白開始建的，難度將會大大提升，所幸最後還是順利用出來了!
