--- a/markdown/41123220_w5.md
+++ b/markdown/41123220_w5.md
@@ -11,23 +11,20 @@ Author:koml
 
 <!-- PELICAN_END_SUMMARY -->
 
-# 第五周作業進度
-本周我完成期中文章翻譯的 第6章以及網誌的撰寫
-
-追蹤事項:<br>
+# 第五週作業
+本週任務:<br>
 1.教學影片分組整理並自評<br>
 *在影片上填上字幕, 另行上傳到可以嵌入到各分組的網站上<br>
 *從影片字幕中整理出逐字稿, 放在影片下方, 以 .txt 連結安排<br>
 *並在各嵌入的教學影片下方, 以摘要方式說明該影片的教學重點<br>
+<br>
 2.利用 NX1872 協同繪製零組件<br>
 3.統整組員子模組中的協同設計網誌<br>
 
-# 影片1~2上字幕
-影片1
-[字幕稿](https://github.com/Changyou41123220/cd2024/files/14784743/1.txt)
-<iframe width="560" height="315" src="https://www.youtube.com/embed/Wd_KVFVZHmw?si=Tt02_MIcBG8IJEbm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-影片2
-[字幕稿](https://github.com/Changyou41123220/cd2024/files/14784861/2.txt)
-<iframe width="560" height="315" src="https://www.youtube.com/embed/tSjwhVKyrb0?si=ewhDv_wVkpDFXZdM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+# 上週追蹤事項
+1.Odoo 參考文章中英並列(期中的作業)<br>
+<br>
+目前我已完成第六章的翻譯以及latex的撰寫<br>
+[第六章latex程式](https://github.com/Changyou41123220/cd2024/files/14893969/CHAPTER6.txt)<br>
+[第六章.pdf](https://github.com/Changyou41123220/cd2024/files/14893973/CHAPTER6.pdf)<br>
 
