期中作業整理

--- a/markdown/41123220_w2.md
+++ b/markdown/41123220_w2.md
@@ -7,7 +7,7 @@ Slug: 41123220 w2
 Author:koml
 ---
 
-2024 Spring 網際內容管理與協同產品設計實習課程教學導引.
+2024 Spring 網際內容管理與協同產品設計實習課程心得.
 
 <!-- PELICAN_END_SUMMARY -->
 
