--- a/markdown/41123220_w4.md
+++ b/markdown/41123220_w4.md
@@ -1,10 +1,10 @@
 ---
-Title: 41123220 w4
+Title: 41123220 bg5 w4
 Date: 2024-03-21 11:00
-Category: 41123220 w4
+Category: 41123220 bg5 w4
 Tags: 網誌編寫
-Slug: 41123220 w4
-Author:koml
+Slug: 41123220 bg5 w4
+Author:41123220
 ---
 
 2024 Spring 網際內容管理與協同產品設計實習課程教學導引.
