--- a/markdown/41123220_w5.md
+++ b/markdown/41123220_w5.md
@@ -1,13 +1,13 @@
 ---
-Title: 41123220 w5
+Title: 41123220 bg5 w5
 Date: 2024-03-28 11:00
-Category: 41123220 w5
-Tags: 網誌編寫
-Slug: 41123220 w5
-Author:koml
+Category: 41123220 bg5 w5
+Tags: latex 網誌撰寫
+Slug: 41123220 bg5 w5
+Author:41123220
 ---
 
-2024 Spring 網際內容管理與協同產品設計實習課程教學導引.
+2024 Spring 網際內容管理與協同產品設計實習課程心得.
 
 <!-- PELICAN_END_SUMMARY -->
 
