--- a/markdown/41123220_w6.md
+++ b/markdown/41123220_w6.md
@@ -1,10 +1,10 @@
 ---
-Title: 41123220 w6
+Title: 41123220 bg5 w6
 Date: 2024-04-04 11:00
-Category: 41123220 w6
-Tags: 網誌編寫
-Slug: 41123220 w6
-Author:koml
+Category: 41123220 bg5 w6
+Tags: 字幕 網誌撰寫
+Slug: 41123220 bg5 w6
+Author:41123220
 ---
 
 2024 Spring 網際內容管理與協同產品設計實習課程教學導引.
