--- a/markdown/41123220_w12.md
+++ b/markdown/41123220_w12.md
@@ -1,10 +1,10 @@
 ---
-Title: 41123220 w12
+Title: 41123220 bg5 w12
 Date: 2024-05-09 11:00
-Category: 41123220 w12
-Tags: 網誌編寫
-Slug: 41123220 w12
-Author:koml
+Category: 41123220 bg5 w12
+Tags: NX 網誌編寫
+Slug: 41123220 bg5 w12
+Author:41123220
 ---
 
 2024 Spring 網際內容管理與協同產品設計實習課程心得.
