--- a/markdown/41123220_w3.md
+++ b/markdown/41123220_w3.md
@@ -1,13 +1,13 @@
 ---
-Title: 41123220 w3
+Title: 41123220 bg5 w3
 Date: 2024-03-14 11:00
-Category: 41123220 w3
+Category: 41123220 bg5 w3
 Tags: 網誌編寫
-Slug: 41123220 w3
-Author:koml
+Slug: 41123220 bg5 w3
+Author:41123220
 ---
 
-2024 Spring 網際內容管理與協同產品設計實習課程教學導引.
+2024 Spring 網際內容管理與協同產品設計實習課程心得.
 
 <!-- PELICAN_END_SUMMARY -->
 
